[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "mongomock"
dynamic = ["version"]
description = "Fake pymongo stub for testing simple MongoDB-dependent code"
readme = { file = "README.rst", content-type = "text/x-rst" }
license = { file = "LICENSE" }
authors = [
    { name = "Rotem Yaari", email = "vmalloc@gmail.com" },
    { name = "Martin Domke", email = "mail@martindomke.net" },
]
classifiers = [
    "License :: OSI Approved :: ISC License (ISCL)",
    "Topic :: Database",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "packaging",
    "pytz",
    "sentinels",
]

[project.optional-dependencies]
pyexecjs = ["pyexecjs"]
pymongo = ["pymongo"]

[project.urls]
Homepage = "https://github.com/mongomock/mongomock"
Changelog = "https://github.com/mongomock/mongomock/blob/develop/CHANGELOG.md"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["mongomock"]

[tool.ruff]
target-version = "py38"
line-length = 100

[tool.ruff.format]
exclude = [
    "mongomock/__init__.pyi",
]

[tool.ruff.lint]
select = ["A", "B", "C", "C4", "E", "F", "I", "N", "Q", "RUF", "S", "SIM", "T10", "UP", "W", "YTT"]
fixable = ["RUF100", "I001", "SIM300", "UP008", "UP003", "C403", "UP031", "UP032"]
ignore = [
    "S101",   # Allow usage of asserts
    "A001",   # Allow shadowing bultins 
    "A003",   # Allow shadowing bultins on classes
    "N818",   # Allow exceptions without Error suffix
    "UP006",  # Allow typing.Tuple
    "UP007",  # Allow typing.Union
]

[tool.ruff.lint.per-file-ignores]
"tests/test__mongomock.py" = ["N802"]
"tests/test__gridfs.py" = ["N802"]

[tool.ruff.lint.mccabe]
max-complexity = 40

[tool.ruff.lint.isort]
order-by-type = false
force-single-line = true
lines-after-imports = 2
